# venturi

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
docs/: guide.md  implementation-plan.md
docs/adr/: 0001-record-architecture-decisions.md  0002-identify-jobs-with-ulids.md  0003-claim-jobs-with-for-update-skip-locked.md  0004-wake-workers-with-listen-notify-and-a-polling-fallback.md  0005-model-job-lifecycle-with-pending-claimed-completed-and-dead-states-retain-all-jobs.md  0005-model-job-lifecycle-with-pending-claimed-completed-and-dead-states.md  0006-configure-the-queue-client-at-construction.md  0007-provide-a-layered-architecture-with-independently-usable-layers.md  0008-isolate-storage-behind-a-backend-trait.md  0009-define-tasks-as-a-trait-dispatched-through-a-type-erased-registry.md  0010-deduplicate-with-a-candidacy-key-and-a-full-task-merge-decision.md  0011-signal-task-outcome-through-completed-pause-results-notes-and-retryable-by-default-errors.md  0011-signal-task-outcome-through-result-with-retryable-by-default-errors.md  0012-retry-with-a-visible-at-gate-fibonacci-backoff-and-proportional-jitter.md  0013-let-the-task-decide-when-to-give-up-with-a-configurable-backstop.md  0014-source-retry-jitter-deterministically-from-the-job-identifier.md  0015-pass-an-execution-context-with-run-history-and-typed-carried-state.md  0015-pass-an-execution-context-with-run-history-typed-carried-state-and-a-journal-attachment.md  0016-record-every-execution-and-merge-in-an-append-only-journal-table.md  0016-record-every-execution-in-an-append-only-journal-table.md  0017-split-the-task-abstraction-into-task-and-handler.md  0018-expose-history-query-and-cleanup-apis.md  0019-recover-stale-claims-by-lease-expiry.md  0020-run-a-bounded-concurrency-claim-and-dispatch-loop.md  0021-shut-down-gracefully-by-draining-cooperatively-then-releasing.md  0022-schedule-claims-by-priority-with-weighted-slot-anti-starvation.md  0023-cap-per-kind-concurrency-locally-at-claim-time.md  0024-build-the-default-storage-adapter-on-tokio-postgres-deadpool-and-refinery.md  (+2 more)
examples/: producer.rs  worker.rs
migrations/: V1__initial.sql  V2__history_cursor.sql  V3__index_tuning.sql
src/: backoff.rs  context.rs  error.rs  lib.rs  observability.rs  outcome.rs  queue.rs  store.rs  task.rs  test_support.rs
tests/: dedup.rs  journal.rs  migrations.rs  notifications.rs  operations.rs  outcomes.rs  pagination.rs  queue.rs  reliability.rs  scheduling.rs  stress.rs
todos/: 01kthy0ty5facbzrwqbvcph074-per-kind-rate-control.md  01ktj9nym9e8r5x3sqmg76a4sf-wakeup-notification-architecture.md  01ktj9nym9e8r5x3sqmg76a4sg-per-task-lease-application.md  01ktj9nym9e8r5x3sqmg76a4sh-handler-panic-immediate-settlement.md  01ktj9nym9e8r5x3sqmg76a4sj-priority-rotation-algorithm.md  01ktj9nym9e8r5x3sqmg76a4sk-worker-default-values.md  01ktj9nym9e8r5x3sqmg76a4sm-public-api-surface-review.md  01ktj9nym9e8r5x3sqmg76a4sn-minor-implementation-decisions.md  01ktj9qaka0nb08bzxd0nxsyts-tls-support-and-construction.md  01ktm8qqz2yehddhmmfk79dwff-postgres-feature-optional-deps.md  01ktm8qqz2yehddhmmfk79dwfg-worker-identity-real-hostname.md  01ktm8qqz2yehddhmmfk79dwfh-stats-snapshot-non-atomic.md  01ktm8qqz2yehddhmmfk79dwfj-recover-stale-respects-task-backoff.md  01ktm8qqz2yehddhmmfk79dwfk-dedup-merge-race-documentation.md  01ktm8qqz2yehddhmmfk79dwfm-backoff-new-validate-or-document.md  01ktm8qqz2yehddhmmfk79dwfn-apply-task-lease-warn-on-guard-miss.md  01ktm8qqz2yehddhmmfk79dwfp-advisory-lock-leak-on-crash-comment.md  01ktm9evvt3nktw4f85c3j8k05-extend-lease-semantics-naming-test.md  01ktm9evvt3nktw4f85c3j8k06-history-filter-limit-negative-divergence.md  01ktm9evvt3nktw4f85c3j8k07-post-run-carry-serialization-misclassified.md  01ktm9evvt3nktw4f85c3j8k08-taskerror-source-naming-collision.md  01ktm9evvt3nktw4f85c3j8k09-store-recover-failure-count-doc.md  01ktm9evvt3nktw4f85c3j8k0a-merge-visible-at-into-paused-job.md  01ktma8g3exra0mmxr4tqet0gb-merge-omits-notify.md  01ktma8g3exra0mmxr4tqet0gc-run-no-i32-u32-divergence.md  01ktmah5xt48e7cd6mca3akm7n-document-merge-fallback-resets-carry.md  01ktmah5xt48e7cd6mca3akm7p-fakestore-oldest-pending-age-comment.md  01ktmbb0z4qjehsx2mkh9zb17a-recover-stale-scan-cadence.md  01ktmbb0z4qjehsx2mkh9zb17b-poisoned-dedup-sibling-blocks-enqueue.md  01ktpxhqy61ahdnnr6dzqaghaz-job-lifecycle-event-stream.md  01ktpxp1dhj7ejkqn15erb3bap-notifier-startup-failure-permanent-poll-only.md  01ktpxp1dhj7ejkqn15erb3baq-migration-history-parse-panics.md  01ktpxp1dhj7ejkqn15erb3bar-settled-metric-emitted-before-store-settle.md  01ktpxp1dhj7ejkqn15erb3bas-with-max-pool-size-zero-footgun.md  01ktpxp1dhj7ejkqn15erb3bat-minor-review-findings-batch.md  01ktpzpd9b4f0pjdmgq5pjkxah-settle-single-attempt-no-retry.md  01ktpzpd9c9d0nqj44hhm51jmm-builder-input-validation-gaps.md  01ktpzpd9c9d0nqj44hhm51jmn-minor-review-findings-batch-2.md  01ktpztwwpd54xgs3bxakdsq6t-migration-apply-comment-overstates-substitution.md  01ktpztwwpd54xgs3bxakdsq6v-keep-merge-row-churn.md  (+21 more)
(+13 files in other folders)
