[package]
name = "venturi"
version = "0.1.0"
edition = "2024"
description = "A durable, PostgreSQL-backed job queue for Rust — controlled flow from backlog to worker."
license = "MIT"
keywords = ["queue", "jobs", "postgres", "background", "worker"]
categories = ["asynchronous", "database"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.45"
deadpool-postgres = "0.14.1"
metrics = { version = "0.24.6", optional = true }
# `refinery`/`refinery-core` are pulled with default features off on purpose:
# the `tokio-postgres` feature would force `native-tls`/`postgres-native-tls`
# into the tree. We instead drive the runner by implementing refinery's async
# migration traits over a `tokio_postgres::Client` ourselves (postgres module).
refinery = { version = "0.9.1", default-features = false }
refinery-core = { version = "0.9.1", default-features = false }
rustls = { version = "0.23.40", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["parsing", "formatting"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.14.0", optional = true }
tokio-util = "0.7.18"
tracing = "0.1.44"
ulid = { version = "1.2.1", features = ["serde"] }

[features]
default = ["postgres"]
# The default PostgreSQL storage adapter (deadpool-postgres + refinery).
postgres = []
# Opt-in metric emission through the vendor-neutral `metrics` facade.
metrics = ["dep:metrics"]
# TLS construction via rustls (the `connect_rustls` constructor). Off by default
# so plaintext-only consumers do not compile the rustls stack; the `from_config`
# constructor still accepts any caller-supplied connector without this feature.
rustls = ["dep:rustls", "dep:tokio-postgres-rustls"]

[dev-dependencies]
futures = "0.3.32"
metrics-util = { version = "0.20.4", features = ["debugging"] }
proptest = "1.11.0"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tracing-subscriber = "0.3.23"
